--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 body{
     background-color:#F7FFFBFF;
-    font-family: 'poppins';
+    font-family: 'Poppins';
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -22,14 +22,14 @@ select{
 }
 
 .barHolder{
-    background-color: #D7D7D7;
+    background-color: #e5e5e5;
     width: 100%;
     height: 20px;
     border-radius: 20px;
 }
 
 .bar{
-    background-color: #45bb45;
+    background-color: #58cc02;
     width: 100%;
     height: 20px;
     display: flex;
@@ -38,7 +38,7 @@ select{
 }
 
 .innerBar{
-    background-color: hsla(120, 70%, 51%, 0.671);
+    background-color: rgb(98, 220, 6);
     width: 80%;
     height: 8px;
     margin-top: 4px;
@@ -100,10 +100,7 @@ img{
 
 .wordStyle-2{
     color: hsla(120, 70%, 51%, 0.671);
-    background-color: rhsla(120, 70%, 51%, 0.671);
+    background-color: hsla(120, 70%, 51%, 0.671);
     box-shadow: 1px 4px hsla(120, 70%, 51%, 0.671);
     border-color: hsla(120, 70%, 51%, 0.671);
-}
-.already_selected{
-    display: block;
 }
